--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 
     <!-- Page Header -->
-    <header class="masthead" style="background-image: url('img/homepage1.jpg')">
+    <header class="masthead" style="background-image: url('img/home-bg.jpg')">
       <div class="overlay"></div>
       <div class="container">
         <div class="row">
