--- a/UnityML.html
+++ b/UnityML.html
@@ -84,9 +84,9 @@
 
             <br/>
 
-            <h2 class="section-heading">Setup</h2>
+            <h2>Setup</h2>
 
-            <h3 class="section-heading">Install</h3>
+            <h3>Install</h3>
             
             <ul>
               <li>
@@ -105,7 +105,7 @@
               
             <br/>
 
-            <h3 class="section-heading">Unity</h3>
+            <h3>Unity</h3>
 
             <ul>
               <li>
@@ -136,7 +136,7 @@
 
             <br/>
 
-            <h3 class="section-heading">Run</h3>
+            <h3>Run</h3>
 
             <ul>
               <li>
@@ -157,12 +157,12 @@
 
               <br/>
 
-              <h3 class="section-heading">That's it!</h3>
+              <h3>That's it!</h3>
 
               <p>A small window should open and run the Unity environment for 20 episodes and close. The terminal will show a few details as well.</p>
 
 
-              <h4 class="section-heading">More details explaining the python code within the script itself are soon to come...</h4>
+              <h4>More details explaining the python code within the script itself are soon to come...</h4>
           </div>
         </div>
       </div>
