--- a/UnityML.html
+++ b/UnityML.html
@@ -86,7 +86,7 @@
 
             <h2>Setup</h2>
 
-            <h3>Install</h3>
+            <b>Install</b>
             
             <ul>
               <li>
@@ -105,7 +105,7 @@
               
             <br/>
 
-            <h3>Unity</h3>
+            <b>Unity</b>
 
             <ul>
               <li>
@@ -136,7 +136,7 @@
 
             <br/>
 
-            <h3>Run</h3>
+            <b>Run</b>
 
             <ul>
               <li>
@@ -154,15 +154,16 @@
               <li>
                 17. Last but not least, while still in the python/ folder, again, located in the ml-agents-master/ folder, run 'python3 test1.py' in the terminal.
               </li>
+            </ul>
 
-              <br/>
+            <br/>
 
-              <h3>That's it!</h3>
+            <h3>That's it!</h3>
 
-              <p>A small window should open and run the Unity environment for 20 episodes and close. The terminal will show a few details as well.</p>
+            <p>A small window should open and run the Unity environment for 20 episodes and close. The terminal will show a few details as well.</p>
 
 
-              <h4>More details explaining the python code within the script itself are soon to come...</h4>
+            <b>More details explaining the python code within the script itself are soon to come...<b>
           </div>
         </div>
       </div>
