changing links from test.py to train_your_agent.py

--- a/UnityML.html
+++ b/UnityML.html
@@ -76,11 +76,11 @@
 
             <p>This code is the bare necessity needed to connect to a Unity ML agent. The full documentation can be found on my github <a href="https://github.com/taylerallen6/UnityML">here</a>.</p>
 
-            <p>It is important to note, this code is from The <a href="https://github.com/Unity-Technologies/ml-agents">Unity ML-Agents</a> repository. The difference is the added <a href="ml-agents-master/python/test1.py">test1.py</a> file which is a script I stitched together from their tutorials. The script connects to a Unity environment, retrieves input and reward data, and sends output data back to the Unity environment to be performed. As is, when the script is run, a small dislay for the unity environment will open and a few iterations will be ran, taking random actions. Then the display window will close. These random actions represent the decisions of a python AI and should be replaced by your own python AI's decision making function. More will be discussed of the script itself later.</p>
+            <p>It is important to note, this code is from The <a href="https://github.com/Unity-Technologies/ml-agents">Unity ML-Agents</a> repository. The difference is the added <a href="ml-agents-master/python/train_your_agent.py">train_your_agent.py</a> file which is a script I stitched together from their tutorials. The script connects to a Unity environment, retrieves input and reward data, and sends output data back to the Unity environment to be performed. As is, when the script is run, a small dislay for the unity environment will open and a few iterations will be ran, taking random actions. Then the display window will close. These random actions represent the decisions of a python AI and should be replaced by your own python AI's decision making function. More will be discussed of the script itself later.</p>
 
             <p>This tutorial uses an older version of <a href="https://github.com/Unity-Technologies/ml-agents">Unity ML-Agents</a>. These steps may not work with the most recent version of <a href="https://github.com/Unity-Technologies/ml-agents">ML-Agents</a>. For that, it is recommended that you use the version in the repository. It is also recommended that you create a virtual environment for this project. This will give you a clean slate for the installing the packages. If you do not use a virtual environment and you have already installed a version of unityagents, it may not work with tutorial.</p>
 
-            <p>The meat of this repository is the <a href="ml-agents-master/python/test1.py">test1.py</a> file located in the ml-agents-master/python/ folder. If you're just interested in how python interacts with Unity in the simplest of examples, check out this file. Else, continue with the setup process to get everything up and running. Keep in mind, this python script will not work alone.</p>
+            <p>The meat of this repository is the <a href="ml-agents-master/python/train_your_agent.py">train_your_agent.py</a> file located in the ml-agents-master/python/ folder. If you're just interested in how python interacts with Unity in the simplest of examples, check out this file. Else, continue with the setup process to get everything up and running. Keep in mind, this python script will not work alone.</p>
 
             <br/>
 
@@ -143,16 +143,16 @@
                 13. Once the build is successful, navigate back to the python/ folder, again, located in the ml-agents-master/ folder.
               </li>
               <li>
-                14. There you will find a python file named <a href="ml-agents-master/python/test1.py">test1.py</a>. This is the script that contains the bare-necessities needed to connect your python AI with Unity. Open the <a href="ml-agents-master/python/test1.py">test1.py</a> file in any text editor.
+                14. There you will find a python file named <a href="ml-agents-master/python/train_your_agent.py">train_your_agent.py</a>. This is the script that contains the bare-necessities needed to connect your python AI with Unity. Open the <a href="ml-agents-master/python/train_your_agent.py">train_your_agent.py</a> file in any text editor.
               </li>
               <li>
                 15. The first line should say something like 'env_name = "unity_executable"'. Replace the 'unity_executable' within the double quotes with the name of the Unity executable you just built. Note, you do NOT need the include the .extention with the name.
               </li>
               <li>
-                16. Also note that, if you were following along correctly, the <a href="ml-agents-master/python/test1.py">test1.py</a> and the Unity executable you just built, are in the same folder. This is important or the script will not be able to find the Unity executable. (unless you specify the correct path youreslf)
+                16. Also note that, if you were following along correctly, the <a href="ml-agents-master/python/train_your_agent.py">train_your_agent.py</a> and the Unity executable you just built, are in the same folder. This is important or the script will not be able to find the Unity executable. (unless you specify the correct path youreslf)
               </li>
               <li>
-                17. Last but not least, while still in the python/ folder, again, located in the ml-agents-master/ folder, run 'python3 test1.py' in the terminal.
+                17. Last but not least, while still in the python/ folder, again, located in the ml-agents-master/ folder, run 'python3 train_your_agent.py' in the terminal.
               </li>
             </ul>
 
