--- a/Mnist_relu_network1.html
+++ b/Mnist_relu_network1.html
@@ -328,8 +328,17 @@ print('Test Data Accuracy: ', test(model, testloader, len(testset)))
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
             <ul class="list-inline text-center">
+		    
               <li class="list-inline-item">
-                <a href="#">
+                <a href="https://www.linkedin.com/in/tayler-allen-57aa98101/">
+                  <span class="fa-stack fa-lg">
+                    <i class="fas fa-circle fa-stack-2x"></i>
+                    <i class="fab fa-linkedin fa-stack-1x fa-inverse"></i>
+                  </span>
+                </a>
+              </li>
+              <li class="list-inline-item">
+                <a href="https://twitter.com/taylerallen6">
                   <span class="fa-stack fa-lg">
                     <i class="fas fa-circle fa-stack-2x"></i>
                     <i class="fab fa-twitter fa-stack-1x fa-inverse"></i>
@@ -337,7 +346,7 @@ print('Test Data Accuracy: ', test(model, testloader, len(testset)))
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#">
+                <a href="https://www.facebook.com/tayler.allen.77">
                   <span class="fa-stack fa-lg">
                     <i class="fas fa-circle fa-stack-2x"></i>
                     <i class="fab fa-facebook-f fa-stack-1x fa-inverse"></i>
@@ -345,13 +354,14 @@ print('Test Data Accuracy: ', test(model, testloader, len(testset)))
                 </a>
               </li>
               <li class="list-inline-item">
-                <a href="#">
+                <a href="https://github.com/taylerallen6">
                   <span class="fa-stack fa-lg">
                     <i class="fas fa-circle fa-stack-2x"></i>
                     <i class="fab fa-github fa-stack-1x fa-inverse"></i>
                   </span>
                 </a>
               </li>
+		    
             </ul>
             <p class="copyright text-muted">Copyright &copy; Your Website 2018</p>
           </div>
