--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <div class="row">
           <div class="col-lg-8 col-md-10 mx-auto">
             <div class="site-heading">
-              <h1>Tech Philosophy</h1>
+              <h1>Software Engineer</h1>
               <!-- <span class="subheading">A Blog Theme by Start Bootstrap</span> -->
             </div>
           </div>
